# get-info-windows-s-rust

./: Cargo.toml  README.md
.github/instructions/: Instructions.instructions.md
imgs/: README.md
src/: main.rs
src/api/: mod.rs  send_info.rs
src/app/: commands_menu.rs  initial_app.rs  mod.rs
src/functions/: dist_check.rs  getinfo.rs  helpers.rs  mod.rs
src/scanner/: mod.rs  run_scanner.rs  scanner.rs
src/utils/: interfase.rs  mod.rs
