[package]
name = "test-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
tokio = {version = "1", features = ["full"]}
if-addrs = "0.6"
ipnetwork = "0.19"
futures = "0.3"
colored = "3.0.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_System_IO",
    
] }